FBINTF Change Log  version                                          (1.0-1) Fri, 06 Jan 2017 15:43:35 +0000

1. Limit maximum Blob segment read/write to MaxuShort. Avoids data loss with
   large blobs and the FB3 API.

2. Update Event Handling algorithm to avoid looping due to recreation of the
   event block.

3. Avoid invalid XSQLDA error when the only parameter is updated to null

4. Array Handling: fix problem with text arrays with character set none. When the
   DB connection has a default character set (e.g. UTF8), an error is raised by
   Firebird if the space allocated is not enough to allow for transliteration, even
   though it is not required for character set none.

5. IBUtils: List of reserved words brought up-to-date

6. Add ISQL style performance statistics collection to IStatement

7. Add IFirebirdAPI.CreateDatabase variant to allow execution of user provided
   CREATE DATABASE statement.

8. Update SQL Statement parsing to allow for Array Dimensions. That is so that the ':' in
   an array dimension is not mistaken for a named parameter prefix.

9. Trim function no longer applied to result of GetAsString for SQL_TEXT
   when Character set is octets. Avoids loss of non printable characters at start of string.

10. Add function GetPerfStatistics to IStatement. This returns ISQL like performance
    statistics for the last action. Requires use of procedure IStatement.EnableStatistics
    to enable stats gathering.

11. API Version information added as constants to IB.pas

FBINTF Change Log  version                                      (1.0-0) Tue, 06 Dec 2016 10:33:47 +0000

1. Initial Release
